# peripherals-misc-io

./: CMakeLists.txt  README.md  test.yaml
.github/workflows/: code-style.yml
example/: test_misc_io.c
include/: misc_io.h
src/: misc_io.c
test/: test_misc_io.c
tests/: test_hw_misc_io_smoke.sh  test_misc_io_api_contract.c  test_misc_io_api_contract.sh
tests/fakes/: fake_gpiod.c  gpiod.h
